/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
    id 'application'
  	id 'eclipse'
  	id 'org.openjfx.javafxplugin' version '0.0.9'
  	id 'org.beryx.jlink' version '2.12.0'
  	
}
apply plugin : 'eclipse'

sourceCompatibility = 14
targetCompatibility = 14

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
    maven{
       url "https://www.javaxt.com/maven"
    }

}

javafx {
    version = "13"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
}


mainClassName = "$moduleName/application.CandyJar"

eclipse {
    classpath {
        file {
            whenMerged {
                entries.findAll { it.properties.kind.equals('lib') }.each {
                    it.entryAttributes['module'] = 'true'
                }
            }
        }
    }
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'CandyJar'
    }
}

configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        if (details.requested.name == 'log4j') {
            details.useTarget "org.slf4j:slf4j-api:2.0.0-alpha1"
        }
	}
	resolutionStrategy {
	
	force("org.slf4j:slf4j-api:2.0.0-alpha1")
	force("org.slf4j:slf4j-simple:2.0.0-alpha1")
	
	
	
	}
}
version = '2.3'

dependencies {
	
	implementation('org.opencadc:jsky:1.0.0')

	implementation(group: 'javax.json', name: 'javax.json-api', version: '1.1')
	implementation(group: 'org.glassfish', name: 'javax.json', version: '1.1')
	implementation(group: 'de.gsi.chart', name: 'chartfx-chart', version: '11.1.5'){
	                                                                 
	exclude group: 'org.apache.xmlgraphics', module: 'batik-bridge'
    exclude group: 'org.apache.xmlgraphics', module: 'batik-script' 
    exclude group: 'org.apache.xmlgraphics', module: 'batik-ext'
    exclude group: 'xml-apis', module: 'xml-apis'
    exclude group: 'xerces', module: 'xercesImpl'
    exclude module: 'xalan'
	}
	
	implementation (group: 'com.mortennobel', name: 'java-image-scaling', version: '0.8.6')	
	implementation (group: 'commons-cli', name: 'commons-cli', version: '1.4')
	
	
		
	implementation (group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0-alpha1')

	implementation (group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1')
	implementation (group: 'org.webjars', name: 'font-awesome', version: '5.13.0')
	implementation (group: 'net.kurobako', name: 'gesturefx', version: '0.7.1')
	implementation (group: 'com.konghq', name: 'unirest-java', version: '3.13.3')
	implementation (group: 'javaxt', name: 'javaxt-core', version: '1.10.6')
	implementation (group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2')

}

application {
    applicationDefaultJvmArgs =  [
            "--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
            "--add-opens=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
            "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
            "--add-opens=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
            "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
            "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls",
            "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
	    '-Xms2048m', '-Xmx4096m'
            
    ]
    //mainClassName = project.findProperty("chooseMain").toString()
}

// if at some point this stupid --add-opens hack does not work, try by adding --add-exports for all the packages. 

